All filters working -- (inc. decimal changes for bet and eig). Also, made variable pull for slider values only find data once and changed the update filter from changing the display of text rather than visibility. This fixed a bug of text not showing up correctly with hovers/ degree > 3

--- a/lab_space/projects/jqa/coref/slider_styles.css
+++ b/lab_space/projects/jqa/coref/slider_styles.css
@@ -137,3 +137,143 @@
 
 }
 /* Mod Slider End */
+
+/* bet Slider Start */
+.bet-slider{
+    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;   
+    width: 600px;  
+    height: 80px;
+    background: #ffffff; 
+    border-radius: 20px;  
+}
+
+.bet-slider input[type="number"]{
+    width: 50px;
+    height: 30px;
+    background: #fff;
+    border: 1px solid #ddd; 
+    font-size: 15px;
+    font-weight: 700;
+    text-align: center;
+    border-radius: 5px;
+}
+
+.bet-slider input [type = "number"]::-webkit-outer-spin-button,
+.bet-slider input [type = "number"]::-webkit-inner-spin-button{
+    -webkit-appearance: none;
+}
+
+.bet-slider .bet-range-slider {
+    position: relative;
+    width: 400px;
+    height: 5px;
+    background: #ddd;
+    outline: none;
+    top: 1px;
+    margin:10px
+}
+
+.bet-slider .bet-range-slider .bet-progress{
+    left: 0%;
+    right: 0%;
+    height: 100%;
+    background: #17a288;
+    border-radius: 50px;
+    position: absolute;
+}
+
+.bet-slider .bet-range-slider input[type="range"]{
+    position: absolute;
+    top: -8px;
+    left: -5px;
+    width: 101%;
+    -webkit-appearance: none;
+    pointer-events: none;
+    background: none;
+    outline: none;
+}
+
+.bet-slider .bet-range-slider input::-webkit-slider-thumb{
+    pointer-events: auto;
+    -webkit-appearance: none;
+    width: 17px;
+    height: 17px;
+    background: #17a288;
+    border-radius: 50px;
+
+
+}
+/* bet Slider End */
+
+/* eig Slider Start */
+.eig-slider{
+    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;   
+    width: 600px;  
+    height: 80px;
+    background: #ffffff; 
+    border-radius: 20px;  
+}
+
+.eig-slider input[type="number"]{
+    width: 50px;
+    height: 30px;
+    background: #fff;
+    border: 1px solid #ddd; 
+    font-size: 15px;
+    font-weight: 700;
+    text-align: center;
+    border-radius: 5px;
+}
+
+.eig-slider input [type = "number"]::-webkit-outer-spin-button,
+.eig-slider input [type = "number"]::-webkit-inner-spin-button{
+    -webkit-appearance: none;
+}
+
+.eig-slider .eig-range-slider {
+    position: relative;
+    width: 400px;
+    height: 5px;
+    background: #ddd;
+    outline: none;
+    top: 1px;
+    margin:10px
+}
+
+.eig-slider .eig-range-slider .eig-progress{
+    left: 0%;
+    right: 0%;
+    height: 100%;
+    background: #17a288;
+    border-radius: 50px;
+    position: absolute;
+}
+
+.eig-slider .eig-range-slider input[type="range"]{
+    position: absolute;
+    top: -8px;
+    left: -5px;
+    width: 101%;
+    -webkit-appearance: none;
+    pointer-events: none;
+    background: none;
+    outline: none;
+}
+
+.eig-slider .eig-range-slider input::-webkit-slider-thumb{
+    pointer-events: auto;
+    -webkit-appearance: none;
+    width: 17px;
+    height: 17px;
+    background: #17a288;
+    border-radius: 50px;
+
+
+}
+/* eig Slider End */
